--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,4 +20,4 @@ jobs:
         pip install pylint
     - name: Analysing changed code with pylint
       run: |
-        pylint --fail-under=9 $(git diff --name-only  --diff-filter=ACMRTUXB main | grep  -E "(.js$|.ts$|.tsx$)")
+        pylint --fail-under=9 $(git diff --name-only  --diff-filter=ACMRTUXB origin/main | grep  -E "(.js$|.ts$|.tsx$)")
