--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,6 +18,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
-    - name: Analysing changed code with pylint
+    - name: Getting all changed Python files
       run: |
-        pylint --fail-under=9 $(git diff --name-only  --diff-filter=ACMRTUXB origin/main | grep  -E "(.js$|.ts$|.tsx$)")
+        echo "changed_files=git diff --name-only  --diff-filter=ACMRTUXB origin/main | grep  -E "(.py$)"" >> $GITHUB_ENV
+    - name: Analysing changed code with pylint
+      if: ${{ env.changed_files != '' }}
+      run: |
+        echo ${{ env.changed_files }}
+        pylint --fail-under=9 ${{ env.changed_files }}
