Added comments to pylint

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,7 @@
-name: Pylint
+name: Pylint Check
+# Requires that changed files reach or exceed the 9.0 threshold
 
+# Only run this Action when making a PR to main
 on:
   pull_request:
     branches:
@@ -21,6 +23,8 @@ jobs:
         pip install requests
     - name: Analysing changed code with pylint
       run: |
+        # For checking more file extensions, do something like "(.js$|.ts$|.tsx$)"
         changed_files=$(git diff --name-only  --diff-filter=ACMRTUXB origin/main | grep  -E "(.py$)")
-        echo $changed_files
+        # For debug purposes
+        #echo $changed_files
         pylint --fail-under=9 $changed_files
