--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,6 +8,8 @@ on:
   pull_request:
     branches:
       - main
+env:
+  python_version: ${{ vars.PYTHON_VERSION }}
 
 # Step 1: Spin up a container with Python 3.7 to doing the checking in
 # Step 2: Install dependencies needed
@@ -17,10 +19,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: $python_version
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
