--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,8 +8,6 @@ on:
   pull_request:
     branches:
       - main
-env:
-  python_version: ${{ vars.PYTHON_VERSION }}
 
 # Step 1: Spin up a container with Python 3.7 to doing the checking in
 # Step 2: Install dependencies needed
@@ -22,7 +20,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: $python_version
+        python-version: ${{ vars.PYTHON_VERSION }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
