Forgot to upload other stuff for db testing

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ scrum/tools/config.json
 scrum/tools/card_json_archive/*
 !scrum/tools/card_json_archive/.gitkeep
 .ipynb_checkpoints
+**/__pycache__/
+**__init__.py
