--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,32 +1,61 @@
 name: Pylint Check
-# Requires that changed files reach or exceed the 9.0 threshold
-# For checking more file extensions, do something like "(.js$|.ts$|.tsx$)"
-# For more information on GitHub Action workflows, see https://docs.github.com/en/actions
 
-# Only run this Action when making a PR to main
 on:
   pull_request:
     branches:
       - main
 
-# Step 1: Spin up a container with Python 3.7 to doing the checking in
-# Step 2: Install dependencies needed
-# Step 3: Gather changed files in PR and run them through pylint
 jobs:
-  build:
+  pylint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Set up Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ vars.PYTHON_VERSION }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-        pip install requests
-    - name: Analysing changed code with pylint
+        pip install pylint requests
+
+    - name: Get list of changed Python files
+      id: get_changed_files
       run: |
-        changed_files=$(git diff --name-only  --diff-filter=ACMRTUXB origin/main | grep  -E "(.py$)")
-        pylint --fail-under=8 $changed_files
+        git fetch origin main
+        CHANGED_FILES=$(git diff --name-only --diff-filter=ACMRTUXB origin/main | grep -E ".py$" || echo "")
+        echo "Changed files: $CHANGED_FILES"
+        echo "::set-output name=files::$CHANGED_FILES"
+
+    - name: Run Pylint on changed files
+      if: steps.get_changed_files.outputs.files != ''
+      working-directory: pocdart_documentation/scrum/tools
+      env:
+        PYTHONPATH: ${{ github.workspace }}/pocdart_documentation/scrum/tools:${{ github.workspace }}
+      run: |
+        echo "Running Pylint..."
+        CHANGED_FILES="${{ steps.get_changed_files.outputs.files }}"
+        echo "Changed files: $CHANGED_FILES"
+        # Initialize an empty variable to hold the files to lint
+        FILES_TO_LINT=""
+        for file in $CHANGED_FILES; do
+          # Check if the file is within the tools directory
+          if [[ "$file" == pocdart_documentation/scrum/tools/* ]]; then
+            # Get the relative path to the file from the tools directory
+            RELATIVE_PATH="${file#pocdart_documentation/scrum/tools/}"
+            # Check if the file exists
+            if [ -f "$RELATIVE_PATH" ]; then
+              FILES_TO_LINT="$FILES_TO_LINT $RELATIVE_PATH"
+            fi
+          fi
+        done
+        echo "Files to lint: $FILES_TO_LINT"
+        if [ -z "$FILES_TO_LINT" ]; then
+          echo "No Python files to lint in the tools directory."
+          exit 0
+        fi
+        # Run pylint with the specified .pylintrc
+        pylint --rcfile=.pylintrc --fail-under=8 $FILES_TO_LINT
