Trying something again with linting

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,4 +29,5 @@ jobs:
     - name: Analysing changed code with pylint
       run: |
         changed_files=$(git diff --name-only  --diff-filter=ACMRTUXB origin/main | grep  -E "(.py$)")
-        pylint --fail-under=8 $changed_files
+        cd /scrum/tools
+        pylint --init-hook='import sys; sys.path.append(".")' --fail-under=8 $changed_files
