Trying to print out location for linting

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,5 +29,6 @@ jobs:
     - name: Analysing changed code with pylint
       run: |
         changed_files=$(git diff --name-only  --diff-filter=ACMRTUXB origin/main | grep  -E "(.py$)")
+        pwd
         cd /scrum/tools
         pylint --init-hook='import sys; sys.path.append(".")' --fail-under=8 $changed_files
