Trying to print out location for linting

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,5 +31,5 @@ jobs:
         changed_files=$(git diff --name-only  --diff-filter=ACMRTUXB origin/main | grep  -E "(.py$)")
         pwd
         ls
-        cd /scrum/tools
+        cd scrum/tools/
         pylint --init-hook='import sys; sys.path.append(".")' --fail-under=8 $changed_files
