--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,6 +26,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
         pip install requests
+        pip install pytest
+        pip install mysql
     - name: Analysing changed code with pylint
       run: |
         changed_files=$(git diff --name-only  --diff-filter=ACMRTUXB origin/main | grep  -E "(.py$)")
