--- a/.github/workflows/lint-reusable.yml
+++ b/.github/workflows/lint-reusable.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ vars.PYTHON_VERSION }}
+          python-version: '3.12.9'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
