--- a/.github/workflows/lint-reusable.yml
+++ b/.github/workflows/lint-reusable.yml
@@ -10,16 +10,26 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - name: Check out repository
+        uses: actions/checkout@v3
+
       - name: Set up Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: '3.12.9'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pylint requests pytest mysql-connector-python
-      - name: Analysing changed code with pylint
+
+      - name: Analyse changed code with pylint
         run: |
-          changed_files=$(git diff --name-only --diff-filter=ACMRTUXB origin/main | grep -E "(.py$)")
+          changed_files=$(git diff --name-only --diff-filter=ACMRTUXB origin/main | grep -E "(.py$)" || true)
+
+          if [ -z "$changed_files" ]; then
+            echo "No Python files changed. Skipping pylint."
+            exit 0
+          fi
+
           pylint --fail-under=8 $changed_files
