--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,4 +8,4 @@ on:
 
 jobs:
   lint_job:
-    uses: splresearch/pocdart_documentation/.github/workflows/lint-reusable.yml@RYFwqajo-pylint_update
+    uses: splresearch/pocdart_documentation/.github/workflows/lint-reusable.yml@main
