--- a/.github/workflows/lint-reusable.yml
+++ b/.github/workflows/lint-reusable.yml
@@ -23,15 +23,25 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pylint requests pytest mysql-connector-python
+          pip install pylint requests pytest mysql-connector-python jinja2 phonenumbers
 
       - name: Analyse changed code with pylint
         run: |
           git fetch origin main
           changed_files=$(git diff --name-only origin/main...HEAD -- '*.py' || true)
           echo "Changed files: $changed_files"
-          if [ -z "$changed_files" ]; then
-            echo "No Python files changed. Skipping pylint."
+          
+          existing_files=""
+          for file in $changed_files; do
+            if [ -f "$file" ]; then
+              existing_files="$existing_files $file"
+            fi
+          done
+          echo "Existing Python files: $existing_files"
+
+          if [ -z "$existing_files" ]; then
+            echo "No Python files exist to lint. Skipping pylint."
             exit 0
           fi
-          pylint --fail-under=8 $changed_files
+
+          pylint --fail-under=8 $existing_files
