--- a/.github/workflows/lint-reusable.yml
+++ b/.github/workflows/lint-reusable.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pylint requests pytest mysql-connector-python jinja2 phonenumbers pandas numpy bs4
+          pip install pylint requests pytest mysql-connector-python jinja2 phonenumbers pandas numpy bs4 colorama
 
       - name: Analyse changed code with pylint
         run: |
